--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -6,8 +6,8 @@ name: Cosmonite
 description: This is my personal OS image.
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/silverblue-main
-image-version: 41 # latest is also supported if you want new updates ASAP
+base-image: ghcr.io/ublue-os/cosmic-atomic-main
+image-version: latest # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
 # you can include multiple instances of the same module
@@ -17,28 +17,27 @@ modules:
       - source: system
         destination: / # copies files/system/* (* means everything inside it) into your image's root folder /
 
-  - type: rpm-ostree
-    repos:
-      - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
+  - type: bling
     install:
-      - micro
-      - starship
-    remove:
-      # example: removing firefox (in favor of the flatpak)
-      # "firefox" is the main package, "firefox-langpacks" is a dependency
-      - firefox
-      - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
+      - rpmfusion
 
   - type: default-flatpaks
     notify: true # Send notification after install/uninstall is finished (true/false)
     system:
       # If no repo information is specified, Flathub will be used by default
       install:
-        - org.mozilla.firefox
-        - org.gnome.Loupe
-      remove:
-        - org.gnome.eog
+        - app.zen_browser.zen
+        - com.github.tchx84.Flatseal
+        - io.missioncenter.MissionCenter
     user: {} # Also add Flathub user repo, but no user packages
 
-  - type: signing # this sets up the proper policy & signing files for signed images to work fully
+  - type: yafti
+    custom-flatpaks:
+      - Firefox: org.mozilla.firefox
+      - Bottles: com.usebottles.bottles
+      - Discord: com.discordapp.Discord
+      - Steam: com.valvesoftware.Steam
+      - Bitwarden: com.bitwarden.desktop
+      - Krita: org.kde.krita
 
+  - type: signing
